test/TestPhases/typechecker/invalid/SideEffect1.blc
module

function sideffect()(x: int32) returns bool
    x = x + 1
    return true
end

activity main ()()
    var x: int32 = 0
    if sideffect()(x) then x = x * 2 end
    await false
end
